# calibre-hardcover-lists-plugin

./: README.md  justfile  pyproject.toml
.github/: codecov.yml
.github/workflows/: build.yaml
lib/graphql/: README.md  pyproject.toml
lib/graphql/src/hcl_graphql/: client.py
lib/graphql/test/hcl_graphql/: test_client.py
plugins/hardcover-gui/: README.md  pyproject.toml
plugins/hardcover-gui/src/hardcover_gui/: __init__.py  book_details.py  ui.py
scripts/: bump.sh  bundle.sh  release.sh  test_plugin_import.py
src/hardcover_list/: __init__.py  book_details.py  config.py  config_widget.py  lists.py  menu_setup.py  queries.py  ui.py
src/hardcover_list/cull_isbn/: isbn_lookup.py  isbn_select_dialog.py
src/hardcover_sync/cull_isbn/: isbn_scan.py
