[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover-gui"
dynamic = ["version"]
description = "Hardcover Lists display for the Calibre book details panel"
readme = "README.md"
authors = [{ name = "Rob Brazier" }]
requires-python = ">=3.9"
dependencies = []

[tool.versioningit.vcs]
default-tag = "hardcover-gui-0.0.0"
match = ["hardcover-gui-*"]
decribe-subst = ""

[tool.versioningit.tag2version]
rmprefix = "hardcover-gui-"

[tool.versioningit.write]
template = '''
__version__ = "{version}"
__version_tuple__ = {version_tuple}
'''
file = "src/hardcover_gui/_version.py"

[tool.ruff]
builtins = ["_", "get_icons"]

[tool.pyright]
typeCheckingMode = "standard"
